buildscript {
	ext {
		springBootVer = '3.3.1'
		querydslVer = '5.0.0'
		springDependencyMgmtVer = '1.1.5'
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version "${springBootVer}"
	id 'io.spring.dependency-management' version "${springDependencyMgmtVer}"
}

group = 'pull-up'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.30.1'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
	implementation 'commons-io:commons-io:2.17.0'
	implementation 'com.google.code.gson:gson:2.11.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	implementation "com.querydsl:querydsl-jpa:${querydslVer}:jakarta"

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	annotationProcessor "com.querydsl:querydsl-apt:${querydslVer}:jakarta"

	// jjwt (JSON Web Token)
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5' // for Jackson JSON parser

	// For Test SNS Login
	implementation 'org.webjars:jquery:3.4.1'
	implementation 'org.webjars:bootstrap:4.3.1'
	implementation 'org.webjars:webjars-locator-core'

	// test dependency
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}
//
//tasks.named('test') {
//	useJUnitPlatform()
//}
